fix: use default token

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,4 +20,4 @@ jobs:
       id: semantic
       uses: cycjimmy/semantic-release-action@v4
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_API_KEY }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
